LittleParser.py
# Generated from Little.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LittleParser ( Parser ):

    grammarFileName = "Little.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "';'", "','", "'('", "')'", "'+'", 
                     "'-'", "'*'", "'/'", "'<'", "'>'", "'='", "'!='", "'<='", 
                     "'>='", "'PROGRAM'", "'BEGIN'", "'END'", "'FUNCTION'", 
                     "'READ'", "'WRITE'", "'IF'", "'ELSE'", "'FI'", "'FOR'", 
                     "'ROF'", "'RETURN'", "'INT'", "'VOID'", "'STRING'", 
                     "'FLOAT'", "'WHILE'", "'ENDIF'", "'ENDWHILE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PROGRAM", "BEGIN", "END", "FUNCTION", "READ", "WRITE", 
                      "IF", "ELSE", "FI", "FOR", "ROF", "RETURN", "INT", 
                      "VOID", "STRING", "FLOAT", "WHILE", "ENDIF", "ENDWHILE", 
                      "OPERATOR", "IDENTIFIER", "STRINGLITERAL", "INTLITERAL", 
                      "FLOATLITERAL", "WHITESPACE", "COMMENT" ]

    RULE_program = 0
    RULE_program_body = 1
    RULE_decl = 2
    RULE_string_decl = 3
    RULE_var_decl = 4
    RULE_var_type = 5
    RULE_any_type = 6
    RULE_id_list = 7
    RULE_id_tail = 8
    RULE_param_decl_list = 9
    RULE_param_decl = 10
    RULE_param_decl_tail = 11
    RULE_func_declarations = 12
    RULE_func_decl = 13
    RULE_func_body = 14
    RULE_stmt_list = 15
    RULE_stmt = 16
    RULE_base_stmt = 17
    RULE_assign_stmt = 18
    RULE_assign_expr = 19
    RULE_read_stmt = 20
    RULE_write_stmt = 21
    RULE_return_stmt = 22
    RULE_expr = 23
    RULE_call_expr = 24
    RULE_expr_list = 25
    RULE_expr_list_tail = 26
    RULE_primary = 27
    RULE_addop = 28
    RULE_mulop = 29
    RULE_if_stmt = 30
    RULE_else_part = 31
    RULE_cond = 32
    RULE_compop = 33
    RULE_while_stmt = 34

    ruleNames =  [ "program", "program_body", "decl", "string_decl", "var_decl", 
                   "var_type", "any_type", "id_list", "id_tail", "param_decl_list", 
                   "param_decl", "param_decl_tail", "func_declarations", 
                   "func_decl", "func_body", "stmt_list", "stmt", "base_stmt", 
                   "assign_stmt", "assign_expr", "read_stmt", "write_stmt", 
                   "return_stmt", "expr", "call_expr", "expr_list", "expr_list_tail", 
                   "primary", "addop", "mulop", "if_stmt", "else_part", 
                   "cond", "compop", "while_stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    PROGRAM=16
    BEGIN=17
    END=18
    FUNCTION=19
    READ=20
    WRITE=21
    IF=22
    ELSE=23
    FI=24
    FOR=25
    ROF=26
    RETURN=27
    INT=28
    VOID=29
    STRING=30
    FLOAT=31
    WHILE=32
    ENDIF=33
    ENDWHILE=34
    OPERATOR=35
    IDENTIFIER=36
    STRINGLITERAL=37
    INTLITERAL=38
    FLOATLITERAL=39
    WHITESPACE=40
    COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(LittleParser.PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def BEGIN(self):
            return self.getToken(LittleParser.BEGIN, 0)

        def program_body(self):
            return self.getTypedRuleContext(LittleParser.Program_bodyContext,0)


        def END(self):
            return self.getToken(LittleParser.END, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LittleParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LittleParser.PROGRAM)
            self.state = 71
            self.match(LittleParser.IDENTIFIER)
            self.state = 72
            self.match(LittleParser.BEGIN)
            self.state = 73
            self.program_body()
            self.state = 74
            self.match(LittleParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Program_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(LittleParser.DeclContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(LittleParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_program_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_body" ):
                listener.enterProgram_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_body" ):
                listener.exitProgram_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_body" ):
                return visitor.visitProgram_body(self)
            else:
                return visitor.visitChildren(self)




    def program_body(self):

        localctx = LittleParser.Program_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.decl()
            self.state = 77
            self.func_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_decl(self):
            return self.getTypedRuleContext(LittleParser.String_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(LittleParser.DeclContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(LittleParser.Var_declContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = LittleParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.STRING]:
                self.state = 79
                self.string_decl()
                self.state = 80
                self.decl()
                pass
            elif token in [LittleParser.INT, LittleParser.FLOAT]:
                self.state = 82
                self.var_decl()
                self.state = 83
                self.decl()
                pass
            elif token in [LittleParser.END, LittleParser.FUNCTION, LittleParser.READ, LittleParser.WRITE, LittleParser.IF, LittleParser.ELSE, LittleParser.RETURN, LittleParser.WHILE, LittleParser.ENDIF, LittleParser.ENDWHILE, LittleParser.IDENTIFIER]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class String_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(LittleParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def STRINGLITERAL(self):
            return self.getToken(LittleParser.STRINGLITERAL, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_string_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_decl" ):
                listener.enterString_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_decl" ):
                listener.exitString_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_decl" ):
                return visitor.visitString_decl(self)
            else:
                return visitor.visitChildren(self)




    def string_decl(self):

        localctx = LittleParser.String_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_string_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(LittleParser.STRING)
            self.state = 88
            self.match(LittleParser.IDENTIFIER)
            self.state = 89
            self.match(LittleParser.T__0)
            self.state = 90
            self.match(LittleParser.STRINGLITERAL)
            self.state = 91
            self.match(LittleParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(LittleParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(LittleParser.Id_listContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = LittleParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.var_type()
            self.state = 94
            self.id_list()
            self.state = 95
            self.match(LittleParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(LittleParser.FLOAT, 0)

        def INT(self):
            return self.getToken(LittleParser.INT, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = LittleParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not(_la==LittleParser.INT or _la==LittleParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Any_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(LittleParser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(LittleParser.VOID, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_any_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_type" ):
                listener.enterAny_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_type" ):
                listener.exitAny_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAny_type" ):
                return visitor.visitAny_type(self)
            else:
                return visitor.visitChildren(self)




    def any_type(self):

        localctx = LittleParser.Any_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_any_type)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LittleParser.INT, LittleParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.var_type()
                pass
            elif token in [LittleParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(LittleParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def id_tail(self):
            return self.getTypedRuleContext(LittleParser.Id_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = LittleParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(LittleParser.IDENTIFIER)
            self.state = 104
            self.id_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def id_tail(self):
            return self.getTypedRuleContext(LittleParser.Id_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_id_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_tail" ):
                listener.enterId_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_tail" ):
                listener.exitId_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_tail" ):
                return visitor.visitId_tail(self)
            else:
                return visitor.visitChildren(self)




    def id_tail(self):

        localctx = LittleParser.Id_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LittleParser.T__2:
                self.state = 106
                self.match(LittleParser.T__2)
                self.state = 107
                self.match(LittleParser.IDENTIFIER)
                self.state = 108
                self.id_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(LittleParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(LittleParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_param_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_list" ):
                listener.enterParam_decl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_list" ):
                listener.exitParam_decl_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl_list" ):
                return visitor.visitParam_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def param_decl_list(self):

        localctx = LittleParser.Param_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LittleParser.INT or _la==LittleParser.FLOAT:
                self.state = 111
                self.param_decl()
                self.state = 112
                self.param_decl_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(LittleParser.Var_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_param_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl" ):
                listener.enterParam_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl" ):
                listener.exitParam_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl" ):
                return visitor.visitParam_decl(self)
            else:
                return visitor.visitChildren(self)




    def param_decl(self):

        localctx = LittleParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.var_type()
            self.state = 117
            self.match(LittleParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_decl_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(LittleParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(LittleParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_param_decl_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_tail" ):
                listener.enterParam_decl_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_tail" ):
                listener.exitParam_decl_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_decl_tail" ):
                return visitor.visitParam_decl_tail(self)
            else:
                return visitor.visitChildren(self)




    def param_decl_tail(self):

        localctx = LittleParser.Param_decl_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_decl_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LittleParser.T__2:
                self.state = 119
                self.match(LittleParser.T__2)
                self.state = 120
                self.param_decl()
                self.state = 121
                self.param_decl_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(LittleParser.Func_declContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(LittleParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_func_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_declarations" ):
                listener.enterFunc_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_declarations" ):
                listener.exitFunc_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declarations" ):
                return visitor.visitFunc_declarations(self)
            else:
                return visitor.visitChildren(self)




    def func_declarations(self):

        localctx = LittleParser.Func_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LittleParser.FUNCTION:
                self.state = 125
                self.func_decl()
                self.state = 126
                self.func_declarations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(LittleParser.FUNCTION, 0)

        def any_type(self):
            return self.getTypedRuleContext(LittleParser.Any_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(LittleParser.IDENTIFIER, 0)

        def param_decl_list(self):
            return self.getTypedRuleContext(LittleParser.Param_decl_listContext,0)


        def BEGIN(self):
            return self.getToken(LittleParser.BEGIN, 0)

        def func_body(self):
            return self.getTypedRuleContext(LittleParser.Func_bodyContext,0)


        def END(self):
            return self.getToken(LittleParser.END, 0)

        def getRuleIndex(self):
            return LittleParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = LittleParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(LittleParser.FUNCTION)
            self.state = 131
            self.any_type()
            self.state = 132
            self.match(LittleParser.IDENTIFIER)
            self.state = 133
            self.match(LittleParser.T__3)
            self.state = 134
            self.param_decl_list()
            self.state = 135
            self.match(LittleParser.T__4)
            self.state = 136
            self.match(LittleParser.BEGIN)
            self.state = 137
            self.func_body()
            self.state = 138
            self.match(LittleParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(LittleParser.DeclContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(LittleParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):

        localctx = LittleParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.decl()
            self.state = 141
            self.stmt_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(LittleParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(LittleParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return LittleParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = LittleParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LittleParser.READ) | (1 << LittleParser.WRITE) | (1 << LittleParser.IF) | (1 << LittleParser.RETURN) | (1 << LittleParser.WHILE) | (1 << LittleParser.IDENTIFIER))) != 0):
                self.state = 143
                self.stmt()
                self.state = 144
                self.stmt_list()

